--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -36,24 +36,19 @@ jobs:
           /usr/libexec/PlistBuddy -c "Set :CFBundleShortVersionString $VERSION" Contents/Info.plist
           /usr/libexec/PlistBuddy -c "Set :CFBundleVersion $VERSION" Contents/Info.plist
           
-      - name: Create app bundle
-        run: |
-          # Create the .app bundle structure
-          mkdir -p "JSYNC Backup.app"
-          cp -R Contents/ "JSYNC Backup.app/"
-          
-          # Set executable permissions (important for macOS apps)
-          chmod +x "JSYNC Backup.app/Contents/Resources/Scripts/main.scpt"
-          
-      - name: Create release archive
+      - name: Create script bundle for Capture One
         run: |
           VERSION=${GITHUB_REF#refs/tags/v}
           
-          # Create ZIP archive
-          zip -r "JSYNC-Backup-v$VERSION.zip" "JSYNC Backup.app"
+          # Create the script bundle structure
+          mkdir -p "JSYNC Backup.scptd"
+          cp -R Contents/ "JSYNC Backup.scptd/"
           
-          # Create DMG for more professional distribution (optional)
-          # hdiutil create -format UDZO -srcfolder "JSYNC Backup.app" "JSYNC-Backup-v$VERSION.dmg"
+          # Set executable permissions
+          chmod +x "JSYNC Backup.scptd/Contents/Resources/Scripts/main.scpt"
+          
+          # Create ZIP archive with the script bundle
+          zip -r "JSYNC-Backup-v$VERSION.zip" "JSYNC Backup.scptd"
           
       - name: Generate release notes
         run: |
@@ -62,23 +57,27 @@ jobs:
           # JSYNC Backup $VERSION
           
           ## Installation
-          1. Download and unzip the archive
-          2. Move "JSYNC Backup.app" to your Applications folder
-          3. Right-click and select "Open" on first launch (macOS security)
+          1. Download and unzip \`JSYNC-Backup-v$VERSION.zip\`
+          2. Double-click \`JSYNC Backup.scptd\` to install it in Capture One
+          3. The script will appear in Capture One's Scripts menu
           
           ## What's New
-          - Improved backup progress notifications
-          - Real-time file transfer status
-          - Enhanced error handling
+          - Real-time backup progress notifications
+          - File count estimation and transfer speeds
+          - Enhanced error handling and user feedback
+          - Seamless Capture One integration
           
           ## Requirements
           - macOS 10.14 or later  
           - Capture One (any recent version)
           
           ## Usage
-          - Launch the app while Capture One is open with a session
-          - Choose backup location or use previously saved location
-          - Monitor progress via system notifications
+          1. Open Capture One with a session loaded
+          2. Go to **Scripts** menu → **JSYNC Backup**
+          3. Choose backup location or use previously saved location
+          4. Monitor progress via system notifications
+          
+          No security warnings - runs directly within Capture One!
           EOF
           
       - name: Create GitHub Release
@@ -98,5 +97,5 @@ jobs:
         with:
           name: jsync-backup-build
           path: |
-            JSYNC Backup.app/
+            JSYNC Backup.scptd/
             JSYNC-Backup-v*.zip
