--- a/Contents/Info.plist
+++ b/Contents/Info.plist
@@ -10,6 +10,8 @@
 	<string>1.2.1</string>
 	<key>CFBundleVersion</key>
 	<string>1.2.1</string>
+	<key>CFBundleIconFile</key>
+	<string>jsync</string>
 	<key>WindowState</key>
 	<dict>
 		<key>bundleDividerCollapsed</key>
