Fix icon display and clean up GitHub Actions
- Fix Info.plist to reference jsync.icns (was missing .icns extension)
- Remove unnecessary icon cache refresh step from GitHub Actions
- Simplify README description and remove Contributing section
- The icon should now display properly in both local builds and GitHub releases

--- a/Contents/Info.plist
+++ b/Contents/Info.plist
@@ -11,7 +11,7 @@
 	<key>CFBundleVersion</key>
 	<string>1.2.1</string>
 	<key>CFBundleIconFile</key>
-	<string>jsync</string>
+	<string>jsync.icns</string>
 	<key>WindowState</key>
 	<dict>
 		<key>bundleDividerCollapsed</key>
